--- a/simple-directory-reader.ipynb
+++ b/simple-directory-reader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,9 +19,9 @@
    "source": [
     "import os\n",
     "import textwrap\n",
-    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Document\n",
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
     "from deeplake.core.vectorstore import DeepLakeVectorStore\n",
-    "\n",
+    "from llama_index.llms.openai import OpenAI\n",
     "\n",
     "# .env file should contain the following:\n",
     "## OPENAI_API_KEY=your_openai_api_key\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "/var/folders/b2/v75vd1gs2p79d_4xb_zx6qv40000gp/T/ipykernel_45768/4052933954.py:10: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
+      "  service_context = ServiceContext.from_defaults(chunk_size=1024, llm=llm)\n"
+     ]
     }
    ],
    "source": [
@@ -76,11 +79,16 @@
     "if not os.path.exists(dataset_path):\n",
     "    os.makedirs(dataset_path)\n",
     "\n",
+    "llm = OpenAI(temperature=0, model=\"gpt-3.5-turbo\")\n",
+    "service_context = ServiceContext.from_defaults(chunk_size=1024, llm=llm)\n",
+    "\n",
     "# Create an index over the documents\n",
     "vector_store = DeepLakeVectorStore(path=dataset_path, overwrite=True)\n",
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "index = VectorStoreIndex.from_documents(\n",
     "    documents, storage_context=storage_context\n",
+    "    ,service_context=service_context\n",
+    "    ,llm=llm\n",
     ")"
    ]
   },
@@ -101,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Muhammad Awais Kaleem is Awais.\n"
+      "Muhammad Awais Kaleem\n"
      ]
     }
    ],
