Replace service_context to Settings.llm

--- a/simple-directory-reader.ipynb
+++ b/simple-directory-reader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,7 @@
    "source": [
     "import os\n",
     "import textwrap\n",
-    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, Settings\n",
     "from deeplake.core.vectorstore import DeepLakeVectorStore\n",
     "from llama_index.llms.openai import OpenAI\n",
     "\n",
@@ -59,16 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "/var/folders/b2/v75vd1gs2p79d_4xb_zx6qv40000gp/T/ipykernel_45768/4052933954.py:10: DeprecationWarning: Call to deprecated class method from_defaults. (ServiceContext is deprecated, please use `llama_index.settings.Settings` instead.) -- Deprecated since version 0.10.0.\n",
-      "  service_context = ServiceContext.from_defaults(chunk_size=1024, llm=llm)\n"
-     ]
+     "text": []
     }
    ],
    "source": [
@@ -79,16 +76,13 @@
     "if not os.path.exists(dataset_path):\n",
     "    os.makedirs(dataset_path)\n",
     "\n",
-    "llm = OpenAI(temperature=0, model=\"gpt-3.5-turbo\")\n",
-    "service_context = ServiceContext.from_defaults(chunk_size=1024, llm=llm)\n",
+    "Settings.llm = OpenAI(temperature=2, model=\"gpt-3.5-turbo\")\n",
     "\n",
     "# Create an index over the documents\n",
     "vector_store = DeepLakeVectorStore(path=dataset_path, overwrite=True)\n",
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "index = VectorStoreIndex.from_documents(\n",
-    "    documents, storage_context=storage_context\n",
-    "    ,service_context=service_context\n",
-    "    ,llm=llm\n",
+    "    documents, storage_context=storage_context, llm=Settings.llm\n",
     ")"
    ]
   },
@@ -102,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +114,13 @@
     ")\n",
     "print(textwrap.fill(str(response), 100))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
